# axion-stock

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  notebook.ipynb  pyproject.toml  requirements-optional.txt  requirements.txt
.streamlit/: config.toml
alembic/: env.py
app/: ai_picks.py  charts.py  chat.py  nav_config.py  streamlit_app.py  styles.py  tools.py
docs/: GAPS-TO-BUILD.md  MODULES.md  PRD-00-MASTER-ROADMAP.md  PRD-01-DATA-INFRASTRUCTURE.md  PRD-02-FACTOR-ENGINE-V2.md  PRD-03-EXECUTION-SYSTEM.md  PRD-04-RISK-MANAGEMENT.md  PRD-05-ML-PREDICTION.md  PRD-06-OPTIONS-PLATFORM.md  PRD-07-SENTIMENT-INTELLIGENCE.md  PRD-08-PORTFOLIO-OPTIMIZER.md  PRD-09-BACKTESTING-ENGINE.md  PRD-10-ENTERPRISE-FEATURES.md  PRD-100-SYSTEM-DASHBOARD.md  PRD-101-STRUCTURED-LOGGING.md  PRD-102-RESILIENCE-PATTERNS.md  PRD-103-OBSERVABILITY-METRICS.md  PRD-104-PRODUCTION-DOCKER.md  PRD-105-ENHANCED-CICD.md  PRD-106-api-error-handling.md  PRD-107-lifecycle-management.md  PRD-108-integration-testing.md  PRD-109-audit-trail.md  PRD-11-MOBILE-API.md  PRD-110-migration-safety.md  PRD-111-configuration-management.md  PRD-112-data-pipeline.md  PRD-113-model-registry.md  PRD-114-alerting-system.md  PRD-115-api-gateway.md  PRD-116-disaster-recovery.md  PRD-117-performance-profiling.md  PRD-118-data-archival.md  PRD-119-websocket-scaling.md  PRD-12-CRYPTO-FUTURES.md  PRD-120-deployment-strategies.md  PRD-121-event-bus.md  PRD-122-multi-tenancy.md  PRD-123-feature-store.md  PRD-124-secrets-vault.md  (+141 more)
src/: backtest.py  (+6 more)
(+1541 files in other folders)
